refact: swagger setup + ajuste de rotas
